--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,10 +8,10 @@
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name" android:debuggable="true">
         <activity
             android:label="@string/app_name"
-            android:name=".HoughyActivity" >
+            android:name=".HomeActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
 
