--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,12 +5,16 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="8" />
+    
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" android:debuggable="true">
         <activity
             android:label="@string/app_name"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
             android:name=".HomeActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
@@ -18,6 +22,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+       		android:label="@string/app_name"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+          	android:configChanges="keyboardHidden"
+       		android:name=".ViewCaptureActivity" >
+       	</activity>
     </application>
 
 </manifest>
